--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -22,6 +22,7 @@ jobs:
           git clone --depth 1 https://${{ secrets.PAT_TOKEN }}@github.com/abgox/schema-docs.git schema-docs
           cd schema-docs
           .\scripts\download-schema-json.ps1
+          .\scripts\update-schema-list.ps1
           git add .
           git commit -m "chore: automatically update some content"
           git push --force
